--- a/public/css/app-landing.css
+++ b/public/css/app-landing.css
@@ -1,4 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);
+body {
+  background: #f5f5f5 !important;
+}
+
 @font-face {
   font-family: "g-italic";
   font-weight: normal;
@@ -58,6 +62,11 @@
   height: 550px;
 }
 
+.category-banner-user {
+  height: 300px;
+  margin-bottom: 0 !important;
+}
+
 .banner-user-elem {
   color: #fff;
   position: relative;
@@ -105,4 +114,9 @@
 
 .ant-menu {
   color: #ff5300 !important;
+}
+
+.ant-btn-primary {
+  background: #ff5300 !important;
+  border-color: #ff5300 !important;
 }
