--- a/resources/sass/app-landing.scss
+++ b/resources/sass/app-landing.scss
@@ -1,5 +1,7 @@
 
-
+body{
+    background: #f5f5f5 !important;
+}
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
 @font-face {
     font-family: 'g-italic';
@@ -31,6 +33,11 @@
 
 .banner-user{
     height: 550px;
+}
+
+.category-banner-user{
+    height: 300px;
+    margin-bottom: 0 !important;
 }
 .banner-user-elem{
     //text-align: center;
@@ -83,4 +90,9 @@
 
 .ant-menu{
     color: $primary !important;
+}
+
+.ant-btn-primary{
+    background: $primary !important;
+    border-color: $primary !important;
 }
