--- a/public/css/app-landing.css
+++ b/public/css/app-landing.css
@@ -1,126 +1,2 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);
-body {
-  background: #f5f5f5 !important;
-}
-
-@font-face {
-  font-family: "g-italic";
-  font-weight: normal;
-  font-style: normal;
-}
-.logo {
-  float: left;
-  width: 145px;
-  height: 31px;
-  margin: 0 24px 16px 0;
-}
-
-.logo-brand {
-  background: #ff5300 !important;
-  color: #fff !important;
-  padding: 7px;
-  text-transform: uppercase;
-}
-
-.logo-brand-1 {
-  border: solid 1px #ff5300 !important;
-  color: #ff5300 !important;
-  padding: 10px;
-  text-transform: uppercase;
-}
-
-.nav-bar {
-  background: #fff !important;
-  text-transform: uppercase !important;
-}
-
-.inputNumber {
-  width: 100% !important;
-}
-
-.text-primary {
-  color: #ff5300 !important;
-}
-
-.banner-anim-arrow-default {
-  position: absolute;
-  width: 60px !important;
-  height: 60px;
-  margin-top: -30px;
-  top: 50%;
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 150%;
-}
-
-.banner-anim-arrow-default.next::before, .banner-anim-arrow-default.prev::before, .banner-anim-arrow-default.next::after, .banner-anim-arrow-default.prev::after {
-  width: 2px;
-  height: 15px;
-  background: #fff;
-  display: block;
-  content: " ";
-  position: absolute;
-  margin-left: 20px;
-}
-
-.banner-user {
-  height: 550px;
-}
-
-.category-banner-user {
-  height: 300px;
-  margin-bottom: 0 !important;
-}
-
-.banner-user-elem {
-  color: #fff;
-  position: relative;
-  overflow: hidden;
-}
-
-.banner-user-elem .banner-user-title {
-  font-size: 60px !important;
-  font-weight: bold;
-  line-height: 1;
-  top: 40%;
-  color: #ff5300;
-  left: 10%;
-}
-
-@media only screen and (max-width: 991px) {
-  .banner-user-elem .banner-user-title {
-    font-size: 20px;
-    top: 40%;
-    color: #ff5300;
-    left: 10%;
-  }
-}
-.banner-user-elem .banner-user-text {
-  top: 40%;
-  color: #ff5300;
-  left: 10%;
-}
-
-.banner-anim-elem .bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-}
-
-.sectionTitle {
-  font-size: 20px;
-  font-weight: bold;
-  color: #ff5300 !important;
-  text-transform: uppercase !important;
-}
-
-.ant-menu {
-  color: #ff5300 !important;
-}
-
-.ant-btn-primary {
-  background: #ff5300 !important;
-  border-color: #ff5300 !important;
-}
+body{background:#f5f5f5!important}@font-face{font-family:g-italic;font-style:normal;font-weight:400}.logo{float:left;height:31px;margin:0 24px 16px 0;width:145px}.logo-brand{background:#ff5300!important;color:#fff!important;padding:7px;text-transform:uppercase}.logo-brand-1{border:1px solid #ff5300!important;color:#ff5300!important;padding:10px;text-transform:uppercase}.nav-bar{background:#fff!important;text-transform:uppercase!important}.inputNumber{width:100%!important}.text-primary{color:#ff5300!important}.banner-anim-arrow-default{background:rgba(0,0,0,.3);border-radius:150%;height:60px;margin-top:-30px;position:absolute;top:50%;width:60px!important}.banner-anim-arrow-default.next:after,.banner-anim-arrow-default.next:before,.banner-anim-arrow-default.prev:after,.banner-anim-arrow-default.prev:before{background:#fff;content:" ";display:block;height:15px;margin-left:20px;position:absolute;width:2px}.banner-user{height:550px}.category-banner-user{height:300px;margin-bottom:0!important}.banner-user-elem{color:#fff;overflow:hidden;position:relative}.banner-user-elem .banner-user-title{color:#ff5300;font-size:60px!important;font-weight:700;left:10%;line-height:1;top:40%}@media only screen and (max-width:991px){.banner-user-elem .banner-user-title{color:#ff5300;font-size:20px;left:10%;top:40%}}.banner-user-elem .banner-user-text{color:#ff5300;left:10%;top:40%}.banner-anim-elem .bg{height:100%;left:0;overflow:hidden;position:absolute;top:0;width:100%}.sectionTitle{font-size:20px;font-weight:700;text-transform:uppercase!important}.ant-menu,.sectionTitle{color:#ff5300!important}.ant-btn-primary{background:#ff5300!important;border-color:#ff5300!important}
